success to get data destination from /speech-to-destination

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,6 +38,7 @@
             android:exported="false" />
         <activity
             android:name=".main.MainActivity"
+            android:theme="@style/Theme.MataNetraSplashScreen"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
